styles/sitbase.css
/* Base styles*/
body {
  font-family: Tahoma, Helvetica, Arial, 'sans serif';
  background-color: #FFFFFF;
  color: #000;
  font-size: 8pt;
  margin: 0px 0px 15px 0px;
  behavior: url('styles/csshover.htc');
}



h1 {
  background-image: url('../images/top2.png');
  font-size: 16pt; font-weight: bold; color: #FFF;
  background-color: #203894; margin: 0px; padding: 3px 0px 3px 0px;
}
h1,h2,h3 { text-align: center; }
select { background: white; }
th { -moz-border-radius: 7px; -khtml-border-radius: 7px; border-radius: 7px; }
img { border:0px; }
blockquote
{
    background-color: transparent;
    border-top: 3px double #203894;
    border-bottom: 3px double #203894;
    padding: 5px;
    font-style: oblique;
    font-size: 1em;
    margin-left: 5%;
    margin-right: 5%;
}
code { white-space: pre; }
td sup { color: #444; }

fieldset { background: #DEDEFF;}
legend { border: 1px solid #185594; background: white; padding: 0px 15px;}
var { font-family: monospace; color: #303030; }

/* ID & Class Selectors */

#masthead {
  background-image: url('../images/top2.png');
  background-position: top-left; background-repeat: x-repeat;
}
#apptitle {
  background-image: url('../images/sit_swirl2.png');
  background-position: top-left; background-repeat: no-repeat;
  height: 50px; background-color: transparent;}
#apptitle span {
  top: 10px;
  position: relative;
}

#aboutsit
{
  text-align: center;
}
#aboutsit img { margin-left: auto; margin-right: auto; }


#menu { border-bottom: 1px solid #203894; padding-bottom: 4px;}
.menuitem li { padding-top: 3px; }

#menu, #noticearea { font-size: 8pt; }

#menu {
/*  float: left; */
  display: block;
  color: #000;
  margin-bottom: 5px;
  width: 100%;
  height: 20px;
}

#menu ul {
  margin: 0;
  padding: 0;
  border: 0;
  list-style-type: none;
  background-color:#FFF;
}

#menu li {
  margin: 0;
  padding: 0;
  border: 0;
  display: block;
  float: left;
  position: relative;
}

#menu li:hover {
  color: #900;
  background-color: #FFF;
}


#menu a {
  display: block;
  text-decoration: none;
  text-align: center;
  color: #5B5B5B;
  padding: 0.25em 0.8em 0.25em 0.8em;
}

#menu a.greyed, #menu a.greyed:hover { color: #C6C3C6; }

#menu li a {
  position: relative;
}

#menu li:hover>a, #menu a:hover {
  color: #205D94;
}

#menu li ul {
  visibility: hidden;
  position: absolute;
  z-index: 10;
  color: #000;
  background-color: #FFFFFF;
  /*padding-top: 14px; */
  padding-bottom: 0px;
  line-height: 14px;
  width: 130px;
  left: -1px;
}

html>body #menu li ul {  display: none; }

#menu li li {
  width: 100%;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: #C5C5C5;
  background: white;
}

#menu li li ul {
  top: 0;
  left: 100%;
}

div#menu li:hover ul,
#menu li:hover li:hover ul,
#menu li:hover li:hover li:hover ul {
    visibility: visible;
}
div#menu li:hover li ul,
#menu li:hover li:hover li ul,
#menu li:hover li:hover li:hover li ul {
    visibility: hidden;
}

#menu ul li:hover>ul {
  display: block;
  visibility: visible;
}

#menu li ul a {
  text-align: left;
  font-weight: normal;
  word-spacing: 0px;
}

#menu li ul a:hover
{
  background-color: #CCC;
  filter:alpha(opacity=75);
  opacity: 0.75;
  -moz-opacity:0.75;
}

#menu li ul li ul {
  padding-top: 0px;
  border-top-width: 1px;
  left: 130px;
}

#menu li li ul {
  border-width: 1px 0 1px 0;
  border-style: solid;
  border-color: #C5C5C5;
}

#menu li.menuitem {
  /* background: url('../images/menu_divider.gif') no-repeat right center; */
}


#menu li li.submenu {
    background-image: url(../images/menuarrow.gif);
    background-repeat: no-repeat;
    background-position: right;
}

#menu li ul a:hover > li.submenu
{
    background-image: url(../images/menuarrow.gif);
    background-repeat: no-repeat;
    background-position: 100% 5px;
}


th:hover { background: #E9E9E9; }

tr.shade1:hover, tr.shade2:hover { background-color: #F2F2F2; }
tr.critical { background-color: #FF4433; }
tr.critical:hover { background-color: #FFAAAB; }
strong.critical { text-decoration: blink; }
tr.critical strong.critical { color: #FFF; }
tr.urgent:hover { background-color: #FFAAAB; }
tr.expired:hover { background-color: #F2F2F2; }
tr.notice:hover { background-color: #F2F2F2; }

#footerbar select { font-size: 80%; }
#footerbar form { margin: 0px; }
#statusbar { clear: both; background-color: #203894; color: #FFF; text-align: left; padding: 2px 0px 2px 0px; margin-top: 1em;}
#statusbar a { text-decoration: none; color: #FFF; }
#statusbar a:hover { text-decoration: underline; }
#statusbar a:active { text-decoration: underline; }

div.windowbox
{
  border: 1px solid #203894;
  width: 95%;
  margin-bottom: 10px;
}

div.windowtitle
{
  background-color: #3B5CA7;
}
div.windowtitle div { float: right; }
div.window table { width: 100%; }

em.important, strong.important { color: red; }
option.disable { color: red; }
option.enable { color: #00AA00; }
option.seperator { border-top: 1px solid black; }

/* Information and Errors */
sup.red { color: #F00; font-size: 125%; } /* FIXME doesn't need a class for this */

p.tip,p.info, p.warning, p.error, p.trigger, h5.warning, h5.error
{
  background-position: 3px 2px;
  background-repeat: no-repeat;
  padding: 3px 3px 3px 22px;
  min-height: 16px;
  -moz-border-radius: 5px;
  /* display: inline; */
  border: 1px solid #000;
  margin-left: 2em;
  margin-right: 2em;
  width: auto;
  text-align: left;
}
p.tip
{
  background-image: url('../images/icons/sit/16x16/tip.png');
  color: black;
  border: 1px solid black;;
  background-color: #FFFFEB;
}
p.info, p.trigger
{
  background-image: url('../images/icons/sit/16x16/info.png');
  color: #17446B;
  border: 1px solid #17446B;
  background-color: #F4F6FF;
}
p.info span, p.error span, p.warning span, p.trigger span { float: right; margin-right: 10px; }
p.warning, h5.warning
{
  background-image: url('../images/icons/sit/16x16/warning.png');
  color: #5A3612;
  border: 1px solid #A26120;
  background-color: #FFECD7;
}
/* ... */

